--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@
 	--black:#282623;
 	--gray:#BABABA;
     --middle-gray: #757575;
+    --high-gray: #808080;
 	--off-white:#FAF8F7;
 	--just-white:#FFFFFF;
 }
@@ -262,4 +263,93 @@ main .main__exchange_tables_container .main__exchange_currency_table .currency_t
     color: var(--black );
     line-height: 1.5rem;
     font-weight: var(--size-300);
+}
+
+/* Products details */
+
+.main__product_details{
+    position: relative;
+    width: 100%;
+    min-width: 320px;
+    height: auto;
+    padding: 20px 10px;
+    background-color: var(--warm-black);
+}
+
+.main__product_details_batatalogo{
+    position: absolute;
+    width: 40px;
+    height: 25px;
+    background-image: url("./assets/icons/batata.svg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    top: -10px;
+    left: calc(50% - 20px);
+}
+
+
+.main__product_details .main__product_details_title{
+    width: 90%;
+    min-width: 288px;
+    height: auto;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 50px;
+}
+
+.main__product_details .main__product_details_title h2{
+    font-size: 2.4rem;
+    margin-bottom: 20px;
+    color: var(--just-white);
+    font-weight: bold;
+    line-height: 2.6rem;
+}
+
+.main__product_details .main__product_details_title p{
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    color: var(--high-gray);
+    font-weight: var(--size-500);
+    line-height: 1.8rem;
+}
+
+.procuct_cards_container .product_cards{
+    width: 90%;
+    min-width: 288px;
+    max-width: 400px;
+    height: 150px;
+    margin: 15px auto;
+    padding: 15px;
+    background-color: var(--black);
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+}
+
+.clock{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-bottom: 10px;
+    background-image: url("./assets/icons/clock.svg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.procuct_cards_container .product_cards .product_card_body{
+
+    font-size: 1.4rem;
+    font-weight: var(--size-500);
+    line-height: 1.8rem;
+    color: var(--high-gray);
+
+}
+
+.procuct_cards_container .product_cards .product_card_title{
+    margin-bottom: 10px;
+    font-size: 1.8rem;
+    color: var(--just-white);
+    font-weight: bold;
+    line-height: 1.8rem;
 }
