fixing bitcoin.svg

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ main .main__exchange_container .main__exchange_image{
     margin-bottom: 50px;
     width: 200px;
     height: 200px;
-    background-image: url("assets/img/bitcoin.svg");
+    background-image: url("assets/img/Bitcoin.svg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
